--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.6",
     "clsx": "^2.1.1",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.5",
